Terminal Saved Output
Last login: Wed Feb 22 13:07:14 on ttys000
(base) julianstark@Julians-MacBook-Air ~ % cd desktop 
(base) julianstark@Julians-MacBook-Air desktop % cd python-challenge
(base) julianstark@Julians-MacBook-Air python-challenge % cd PyBank 
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
Traceback (most recent call last):
  File "/Users/julianstark/Desktop/python-challenge/PyBank/main.py", line 19, in <module>
    for row in reader:
ValueError: I/O operation on closed file.
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
  File "/Users/julianstark/Desktop/python-challenge/PyBank/main.py", line 22
    total_months += 1
    ^
IndentationError: expected an indented block
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
  File "/Users/julianstark/Desktop/python-challenge/PyBank/main.py", line 22
    total_months += 1
IndentationError: expected an indented block
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
  File "/Users/julianstark/Desktop/python-challenge/PyBank/main.py", line 22
    total_months += 1
    ^
IndentationError: expected an indented block
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
Financial Analysis
-------------------------
Total Months: 86
Total: $382539
Average Change: $4448.13
Greatest Increase in Profits: Feb-17 ($382539)
Greatest Decrease in Profits: Feb-17 ($382539)
(base) julianstark@Julians-MacBook-Air PyBank % python main.py
Financial Analysis
-------------------------
Total Months: 86
Total: $382539
Average Change: $4448.13
Greatest Increase in Profits: Feb-17 ($382539)
Greatest Decrease in Profits: Feb-17 ($382539)
(base) julianstark@Julians-MacBook-Air PyBank % 
